# nextgen-wireless-dl-demos

./: .gitignore  Dockerfile  LICENSE  README.md  docker-instructions.md  pyproject.toml
demos/dpd/: README.md
demos/dpd/tests/: test_ls_dpd_system.py  test_nn_dpd_system.py
demos/mimo_ofdm_neural_receiver/: README.md  baseline.py  plots.py
demos/mimo_ofdm_neural_receiver/src/: system.py
demos/pusch_autoencoder/: README.md  baseline.py  inference.py  plots.py  training.py
demos/pusch_autoencoder/src/: cir_manager.py  config.py  system.py  (+2 more)
docker/: docker-instructions.md  entrypoint.sh
docs/: conf.py  index.rst
docs/api/: dpd.rst  pusch_autoencoder.rst
docs/demos/: mimo_ofdm_neural_receiver.rst  pusch_autoencoder.rst
dpd/: inference.py  training.py
dpd/src/: __init__.py  indirect_learning_dpd.py  interpolator.py  nn_dpd.py  system.py  utilities.py
mimo_ofdm_neural_receiver/: baseline.py  inference.py  plots.py  training.py
mimo_ofdm_neural_receiver/src/: channel.py  config.py  csi.py  neural_rx.py  rx.py  system.py  tx.py
mimo_ofdm_over_cdl/: 04_mimo_ofdm_over_cdl.py  baseline_eval.py  example.py  gen_plots.py  mimo_ofdm_over_cdl.py  training.py
mimo_ofdm_over_cdl/sim/: sim.py
mimo_ofdm_over_cdl/src/: __init__.py  channel.py  config.py  csi.py  rx.py  system.py  tx.py
pusch_autoencoder/: baseline.py  cir.py  cir_generator.py  config.py  inference.py  plots.py  system.py  training.py
pusch_autoencoder/src/: __init__.py  cir_manager.py  config.py  pusch_neural_detector.py  pusch_trainable_receiver.py  pusch_trainable_transmitter.py  system.py
(+7 files in other folders)
